# attr_sync_thing

./: .gitignore  README.md  pyproject.toml
attr_sync_thing/: __main__.py  attr_storage.py  configuration.py  file_info.py  logging.py
doc/: attr_sync_thing_wrapper  de.tux4web.attr-sync-thing.plist
