[project]
name="attr_sync_thing"
version="0.2"
authors = [
  { name="Diedrich Vorberg", email="diedrich@tux4web.de" },
]
description="Sync MacOS extended attributes through tools that do not support them (like nextCloud or ownCloud)."
readme="README.md"

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: MacOS :: MacOS X",
]

[tool.setuptools]
py-modules = [ "attr_sync_thing", ]

[project.urls]
"Homepage" = "https://github.com/dvorberg/attr_sync_thing"


[build-system]
requires = ["setuptools>=61.0", "watchdog>=2.1.9", "xattr>=0.9.9"]
build-backend = "setuptools.build_meta"
